--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "contentlayer build && next build",
     "start": "next start",
     "lint": "next lint",
-    "ts:watch": "tsc --noEmit --incremental",
-    "prettier": "prettier --write .",
-    "format:check": "prettier --check ."
+    "typecheck": "tsc --noEmit --incremental",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@tabler/icons-react": "^3.34.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "contentlayer": "^0.3.4",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "next": "15.3.4",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "shadcn": "^2.7.0",
     "tailwind-merge": "^3.3.1"
   },
