--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@tabler/icons-react": "^3.34.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
